--- a/package.json
+++ b/package.json
@@ -10,7 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.2.5",
+    "@fontsource/playfair-display": "^5.2.5",
+    "@fontsource/qwigley": "^5.2.5",
+    "@fontsource/schoolbell": "^5.2.5",
+    "@fontsource/short-stack": "^5.2.5",
+    "@fontsource/twinkle-star": "^5.2.5",
+    "@fontsource/uncial-antiqua": "^5.2.5",
+    "@fontsource/vibes": "^5.2.5",
     "@supabase/supabase-js": "^2.49.4",
+    "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
     "framer-motion": "^12.9.4",
     "react": "^19.0.0",
@@ -22,10 +31,13 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.5",
     "vite": "^6.3.1"
   }
 }
