--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
     "framer-motion": "^12.9.4",
+    "gsap": "^3.13.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.3"
