--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "@fontsource/twinkle-star": "^5.2.5",
     "@fontsource/uncial-antiqua": "^5.2.5",
     "@fontsource/vibes": "^5.2.5",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
     "framer-motion": "^12.9.4",
     "gsap": "^3.13.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-router-dom": "^7.5.3"
   },
   "devDependencies": {
@@ -40,5 +42,10 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.5",
     "vite": "^6.3.1"
+  },
+  "overrides": {
+    "@supabase/auth-ui-react": {
+      "react": "19.1.0"
+    }
   }
 }
