--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.49.4",
+    "@tabler/icons-react": "^3.34.1",
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
     "framer-motion": "^12.9.4",
