--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "inkoraa",
+  "name": "ecommerce",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,45 +10,34 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fontsource/inter": "^5.2.5",
-    "@fontsource/playfair-display": "^5.2.5",
-    "@fontsource/qwigley": "^5.2.5",
-    "@fontsource/schoolbell": "^5.2.5",
-    "@fontsource/short-stack": "^5.2.5",
-    "@fontsource/twinkle-star": "^5.2.5",
-    "@fontsource/uncial-antiqua": "^5.2.5",
-    "@fontsource/vibes": "^5.2.5",
-    "@fortawesome/free-solid-svg-icons": "^6.7.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "@supabase/auth-ui-react": "^0.4.7",
-    "@supabase/auth-ui-shared": "^0.1.8",
-    "@supabase/supabase-js": "^2.49.4",
-    "@tabler/icons-react": "^3.34.1",
-    "@tailwindcss/vite": "^4.1.5",
-    "axios": "^1.9.0",
-    "framer-motion": "^12.9.4",
-    "gsap": "^3.13.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-router-dom": "^7.5.3"
+    "@reduxjs/toolkit": "^2.4.0",
+    "@stripe/react-stripe-js": "^3.0.0",
+    "@stripe/stripe-js": "^5.2.0",
+    "@supabase/supabase-js": "^2.52.0",
+    "axios": "^1.7.8",
+    "bootstrap": "^5.3.3",
+    "countup.js": "^2.8.0",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.6",
+    "react-countup": "^6.5.3",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^7.0.1",
+    "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.6",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.22.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react-swc": "^3.8.0",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.22.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.5",
-    "vite": "^6.3.1"
-  },
-  "overrides": {
-    "@supabase/auth-ui-react": {
-      "react": "19.1.0"
-    }
+    "@eslint/js": "^9.13.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.3",
+    "eslint": "^9.13.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "globals": "^15.11.0",
+    "vite": "^6.0.1"
   }
 }
